# anima

./: COPYING  LICENSE  README.md  environment.yml  pyproject.toml  temp_requirements.txt
databases/: OMEAD_info
databases/data_paper1/: README.md  info  proposed_cathodes.csv
databases/data_paper2/: K_dft.csv  K_predictions.csv  Li_dft.csv  Li_predictions.csv  Na_dft.csv  Na_predictions.csv  OMEAD_info  README.md  info
examples/: AI-kernel.ipynb  SMILES.ipynb
examples/xyz/: 0.xyz  1.xyz  10.xyz  100.xyz  11.xyz  12.xyz  13.xyz  14.xyz  15.xyz  16.xyz  17.xyz  18.xyz  19.xyz  2.xyz  20.xyz  21.xyz  22.xyz  23.xyz  24.xyz  25.xyz  26.xyz  27.xyz  28.xyz  29.xyz  3.xyz  30.xyz  31.xyz  32.xyz  33.xyz  34.xyz  35.xyz  36.xyz  37.xyz  38.xyz  39.xyz  4.xyz  40.xyz  41.xyz  42.xyz  43.xyz  (+61 more)
src/anima/: Unfinished_mlpot.py  __init__.py  models.py  neuralnetwork.py  representations.py  smiles.py
src/anima.egg-info/: PKG-INFO  SOURCES.txt
src/anima/lib/: xyz2mol.py  xyz2mol.py_info
src/anima/lib/aikernel/old/: full_nn_ox.pt  full_nn_red.pt  models.py_old  nn_ox.pt  nn_red.pt
