[project]
name = "anima"
version = "1.0.0"
readme = "README.md"
authors = [
    { name = "Rodrigo Carvalho", email = "rodrigo@evyon.com" },
]
requires-python = ">=3.7"
dependencies = [
    # "numpy",
    # "pandas==1.3.5",
    # "networkx==2.5",
    # "scipy==1.7.3",
    # "joblib==1.1.0",
    # "scikit-learn==1.0.2",
    # "rdkit",
    #"pysmiles==1.0.1",
    #"torch==1.11.0",
    #"torch-geometric==2.0.0",
    # "torch-cluster==1.6.0",
    # "torch-geometric==2.0.0",
    # "torch-scatter==2.0.9",
    # "torch-sparse==0.6.13",
]

[tool.setuptools.package-data]
anima = ["**/*.dat", "**/*.pt", "**/*.pt_full"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
